# cpp_httplib_vendor

./: CMakeLists.txt  README.md  package.xml
patches/: namespace_exposed.patch
