<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_httplib_vendor</name>
  <version>0.13.0</version>
  <description>Vendor package for the cpp-httplib single-header HTTP/HTTPS server and client.</description>
  <maintainer email="guilherme.rodrigues@ait.ac.at">Guilherme Rodrigues</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
